fix: fixed top white space on hero_container

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  border: 0.01px solid transparent;
+  /* border: 0.01px solid transparent; */
 }
 a {
   text-decoration: none;
@@ -40,22 +40,21 @@ body {
 }
 
 .hero_section {
-  /* background: url("./assets/bg.jpg"); */
   background-size: cover;
   background-image: url("./assets/cover.jpg");
   text-align: center;
   height: 90vh;
+  /* background-color: yellow; */
 }
 
 .hero_container {
-  margin-top: 6rem;
-  margin-left: 3vw;
-  margin-right: 3vw;
+  /* background-color: green; */
+  padding: 6rem 0;
 }
 
 .hero_h1 {
   font-size: 9vw; /* font size of the h1 */
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
   color: var(--p-blue);
 }
 
@@ -68,10 +67,11 @@ body {
   border-radius: 4rem;
   font-size: 1.5rem;
   background-color: var(--p-blue);
-  padding: 0.7rem 1.5rem;
+  padding: 0.9rem 2.5rem;
   cursor: pointer;
   margin-top: 5rem;
   color: white;
+  border: unset;
 }
 
 .join_btn a {
